# bootstrap

./: .gitignore  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.sh
.github/workflows/: ci.yml  deploy.yml
docs/: continue-learning.md  contributing.md  getting-started.md  index.md  problems-to-solve.md  reference.md  tutorials.md
docs/git/: gitignore.md  index.md  interactive-learning.md  merge-conflicts.md  reference.md  staging-commits.md
docs/java/: data-structures.md  idioms.md  index.md  reference.md  setup.md  syntax.md
docs/tutorials/: first-python-program.md
scripts/: dev.sh
src/bootstrap/: __init__.py
