[project]
name = "bootstrap"
version = "0.1.0"
description = "Bootstrap your coding skills to get started with a solid foundation."
readme = "README.md"
authors = [
    { name = "Chris Lunsford", email = "cm@lunsford.io" }
]
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material[recommended]>=9.6.15",
    "mkdocs-open-in-new-tab>=1.0.8",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[project.scripts]
bootstrap = "bootstrap:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
extend-select = [
    "B",  # flake8-bugbear
    "I",  # isort
    "Q",  # flake8-quotes
]
ignore = []
ignore-init-module-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
